--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="english" translatable="false">English</string>
+    <string name="polski" translatable="false">Polski</string>
     <string name="app_name">MessengerApp</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -8,4 +10,15 @@
     <string name="email">Email</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
+    <string name="type_message">Type message…</string>
+    <string name="send">Send</string>
+    <string name="usernameChat">Username</string>
+    <string name="messages">Messages</string>
+    <string name="new_chat">New chat</string>
+    <string name="user_search">Find a user</string>
+    <string name="user_doesnt_exist">User doesn\'t exist</string>
+    <string name="incorrect_user">Please use a valid user id</string>
+    <string name="cancel">Cancel</string>
+    <string name="back"><![CDATA[<]]></string>
+    <string name="logout">Logout</string>
 </resources>
