--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="role_format">Role: %1$s</string>
     <string name="account_deleted">Account deleted!!!</string>
     <string name="username2">Username: </string>
+    <string name="notification_title">New message from: </string>
 </resources>
